--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -13,6 +13,6 @@
   <meta name="theme-color" content="#1976d2">
 </head>
 <body>
-  <app-root></app-root>
+  <awrss-root></awrss-root>
 </body>
 </html>
