--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -3,15 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title>DesuRSS</title>
+  <title>Aw-Rss</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1">
+  <meta name="mobile-web-app-capable"
+        content="yes" />
+  <meta name="apple-mobile-web-app-capable"
+        content="yes" />
+  <link rel="icon"
+        type="image/x-icon"
+        href="favicon.ico">
+  <link rel="manifest"
+        href="manifest.json">
+  <meta name="theme-color"
+        content="#1976d2">
 </head>
 
 <body>
