--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype HTML>
 <html lang="en">
 
 <head>
@@ -19,6 +19,10 @@
         href="manifest.json">
   <meta name="theme-color"
         content="#1976d2">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
+        rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        rel="stylesheet">
 </head>
 
 <body>
