--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Aw-Rss</title>
+  <title>Aw-RSS</title>
   <base href="/">
 
   <meta name="viewport"
-        content="width=device-width, initial-scale=1">
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="mobile-web-app-capable"
         content="yes" />
   <meta name="apple-mobile-web-app-capable"
