--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,9 @@
         href="manifest.json">
   <meta name="theme-color"
         content="#1976d2">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
+  <link rel="preconnect"
+        href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
         rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
